qa/airflow/deployments-override.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - name: airflow-scheduler
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
              readOnly: true
            - name: ca-certificate
              mountPath: /opt/ca
              readOnly: true
      volumes:
        - name: dags
          hostPath:
            path: /opt/airflow-dags
        - name: ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - name: airflow-webserver
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
              readOnly: true
            - name: ca-certificate
              mountPath: /opt/ca
              readOnly: true
      volumes:
        - name: dags
          hostPath:
            path: /opt/airflow-dags
        - name: ca-certificate
          secret:
            secretName: postgres-qa-ca-certificate
            defaultMode: 0555
