qa/airflow/ingress.yml
---
kind: Service
apiVersion: v1
metadata:
  name: airflow-webserver
spec:
  type: ExternalName
  externalName: airflow-webserver.airflow.svc.cluster.local
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - jobs.qa.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: jobs.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: airflow-webserver
            servicePort: 8080
